changes to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="main.css">
 <link href="https://fonts.googleapis.com/css?family=Kameron" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-<link rel="shortcut icon" type="image/x-icon" href="images/bluesc.png" />
+<link rel="shortcut icon" type="image/x-icon" href="https://icon2.kisspng.com/20180328/vkw/kisspng-blushing-emoji-emoticon-smiley-clip-art-emoji-5abb337b5ee3d6.4643901615222178513887.jpg" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,300italic|Raleway:300,900">
 <meta name=“viewport” content=“width=device-width, initial-scale=1.0">
   </head>
